--- a/.github/workflows/trigger-release.yml
+++ b/.github/workflows/trigger-release.yml
@@ -19,11 +19,49 @@ on:
         options:
           - main
           - master
+    secrets:
+          GH_TOKEN:
+            required: true
 
 jobs:
-  deploy:
-    uses: ./.github/workflows/create-and-merge-pr.yml
-    with:
-      source_branch: ${{ github.event.inputs.source_branch }}
-      target_branch: ${{ github.event.inputs.target_branch }}
+  create-and-merge-pull-request:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+      - name: "Trigger merge from ${{ inputs.source_branch }} to ${{ inputs.target_branch }}"
+        env:
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          SOURCE_BRANCH: ${{ github.event.inputs.source_branch }}
+          TARGET_BRANCH: ${{ github.event.inputs.target_branch }}
+        run: |
+          git checkout ${TARGET_BRANCH}
+          git checkout ${SOURCE_BRANCH}
+          has_diff=$( git diff --quiet --exit-code ${SOURCE_BRANCH} ${TARGET_BRANCH} ; echo $? )
+          if [[ "${has_diff}" == "0" ]]; then
+            echo "no diff between ${SOURCE_BRANCH} and ${DEPLOY_TARGET}, aborting step ..."
+            exit 0
+          elif [[ "${has_diff}" != "1" ]]; then
+            echo 'git diff failed unexpectedly.'
+            exit 1
+          fi
+          
+          # Create pull request
+          pr_url=$( \
+            gh pr create \
+              --base ${SOURCE_BRANCH} \
+              --head ${SOURCE_BRANCH} --label "semantic-release" \
+              --title "chore: merge ${SOURCE_BRANCH} into ${TARGET_BRANCH}" \
+              --body "This pull request has been created to trigger a release on ${TARGET_BRANCH} an will merge automatically." \
+              --no-maintainer-edit )
+
+          echo "Created pull request ${pr_url}"
+
+          if [[ -z "${pr_url}" ]]; then
+            echo "tailed to create pull request unexpectedly."
+            exit 1
+          fi
+          gh pr merge ${pr_url} --admin --merge
+
 
