--- a/.github/workflows/trigger-release.yml
+++ b/.github/workflows/trigger-release.yml
@@ -35,6 +35,8 @@ jobs:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
           SOURCE_BRANCH: ${{ github.event.inputs.source_branch }}
           TARGET_BRANCH: ${{ github.event.inputs.target_branch }}
+          PR_TITLE: "chore: merge ${{ github.event.inputs.source_branch }} into ${{ github.event.inputs.target_branch }}"
+          PR_BODY: "This pull request has been created to trigger a release on ${{ github.event.inputs.target_branch }} an will merge automatically."
         run: |
           git checkout ${TARGET_BRANCH}
           git checkout ${SOURCE_BRANCH}
@@ -47,14 +49,9 @@ jobs:
             exit 1
           fi
           
-          # Create pull request
-          pr_url=$( \
-            gh pr create \
-              --base ${SOURCE_BRANCH} \
-              --head ${SOURCE_BRANCH} --label "semantic-release" \
-              --title "chore: merge ${SOURCE_BRANCH} into ${TARGET_BRANCH}" \
-              --body "This pull request has been created to trigger a release on ${TARGET_BRANCH} an will merge automatically." \
-              --no-maintainer-edit )
+          echo "Creating pull request ..."
+
+          pr_url=$( gh pr create --base ${TARGET_BRANCH} --head ${SOURCE_BRANCH} --title "{$PR_TITLE}" --body "${PR_BODY}" --no-maintainer-edit )
 
           echo "Created pull request ${pr_url}"
 
@@ -62,6 +59,11 @@ jobs:
             echo "tailed to create pull request unexpectedly."
             exit 1
           fi
+
+          echo "Merging pull request ${pr_url} ..."
+
           gh pr merge ${pr_url} --admin --merge
+
+          echo "Pull request merged 🚀"
 
 
