--- a/.github/workflows/trigger-release.yml
+++ b/.github/workflows/trigger-release.yml
@@ -59,7 +59,7 @@ jobs:
 
           echo "🚀 Merging pull request ${pr_url} ..."
 
-          gh pr merge ${pr_url} --admin --merge --body ${PR_TITLE}
+          gh pr merge ${pr_url} --admin --merge --subject ${PR_TITLE}
 
           echo "Pull request merged 🚀"
 
