--- a/.github/workflows/trigger-release.yml
+++ b/.github/workflows/trigger-release.yml
@@ -32,7 +32,7 @@ jobs:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SOURCE_BRANCH: ${{ github.event.inputs.source_branch }}
           TARGET_BRANCH: ${{ github.event.inputs.target_branch }}
-          PR_TITLE: "chore: merge ${{ github.event.inputs.source_branch }} into ${{ github.event.inputs.target_branch }}"
+          PR_TITLE: "ci: merge ${{ github.event.inputs.source_branch }} into ${{ github.event.inputs.target_branch }}"
           PR_BODY: "This pull request has been created to trigger a release on ${{ github.event.inputs.target_branch }} an will merge automatically."
         run: |
           git checkout ${TARGET_BRANCH}
@@ -48,18 +48,41 @@ jobs:
           
           echo "🚀 Creating pull request from ${SOURCE_BRANCH} to ${TARGET_BRANCH}"
 
+          PR_TITLE="ci: merge ${SOURCE_BRANCH} into ${TARGET_BRANCH}"
+          PR_BODY: "This pull request has been created to trigger a release on ${TARGET_BRANCH} an should merge automatically"
+
           pr_url=$( gh pr create --base ${TARGET_BRANCH} --head ${SOURCE_BRANCH} --title "${PR_TITLE}" --body "${PR_BODY}" --no-maintainer-edit )
 
           echo "Created pull request ${pr_url} 🚀"
 
           if [[ -z "${pr_url}" ]]; then
-            echo "tailed to create pull request unexpectedly."
+            echo "failed to create pull request unexpectedly."
             exit 1
           fi
 
-          echo "🚀 Merging pull request ${pr_url} ..."
+          echo "🚀 Merging pull request ${pr_url} using a merge commit ..."
 
           gh pr merge ${pr_url} --admin --merge --subject ${PR_TITLE}
+
+          echo "Pull request merged 🚀"
+
+          echo "🚀 Creating pull request back from ${TARGET_BRANCH} to ${SOURCE_BRANCH}"
+
+          PR_TITLE="ci: merge ${TARGET_BRANCH} into ${SOURCE_BRANCH}"
+          PR_BODY: "This pull request has been created after a release on ${TARGET_BRANCH} an should merge automatically"
+
+          pr_url=$( gh pr create --base ${SOURCE_BRANCH} --head ${TARGET_BRANCH} --title "${PR_TITLE}" --body "${PR_BODY}" --no-maintainer-edit )
+
+          echo "Created pull request ${pr_url} 🚀"
+
+          if [[ -z "${pr_url}" ]]; then
+            echo "failed to create pull request unexpectedly."
+            exit 1
+          fi
+
+          echo "🚀 Merging pull request ${pr_url} using rebase ..."
+
+          gh pr merge ${pr_url} --admin --rebase
 
           echo "Pull request merged 🚀"
 
