--- a/.github/workflows/trigger-release.yml
+++ b/.github/workflows/trigger-release.yml
@@ -7,7 +7,9 @@ on:
         description: 'Source branch'
         required: true
         default: 'alpha'
-        type: string
+        type: choice
+        options:
+          - alpha
       target_branch:
         description: 'Target branch'
         required: true
