--- a/.github/workflows/sync-branches.yml
+++ b/.github/workflows/sync-branches.yml
@@ -16,6 +16,7 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           TARGET_BRANCH: "alpha"
+          SOURCE_BRANCH: "main"
         run: |
           SOURCE_BRANCH=$(git rev-parse --abbrev-ref HEAD)
 
