--- a/.github/workflows/trigger-release.yml
+++ b/.github/workflows/trigger-release.yml
@@ -16,7 +16,7 @@ on:
         default: 'main'
         type: choice
         options:
-          - master
+          - main
 
 jobs:
   trigger-release:
