--- a/.github/workflows/trigger-release.yml
+++ b/.github/workflows/trigger-release.yml
@@ -30,11 +30,9 @@ jobs:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SOURCE_BRANCH: ${{ github.event.inputs.source_branch }}
           TARGET_BRANCH: ${{ github.event.inputs.target_branch }}
-          PR_TITLE: "ci: merge ${{ github.event.inputs.source_branch }} into ${{ github.event.inputs.target_branch }}"
-          PR_BODY: "⚠️ This pull request has been created to trigger a release on ${{ github.event.inputs.target_branch }} an will merge automatically."
         run: |
-          git checkout ${TARGET_BRANCH}
           git checkout ${SOURCE_BRANCH}
+          git checkout ${TARGET_BRANCH}
           has_diff=$( git diff --quiet --exit-code ${SOURCE_BRANCH} ${TARGET_BRANCH} ; echo $? )
           if [[ "${has_diff}" == "0" ]]; then
             echo "no diff between ${SOURCE_BRANCH} and ${DEPLOY_TARGET}, aborting step ..."
@@ -43,11 +41,14 @@ jobs:
             echo 'git diff failed unexpectedly.'
             exit 1
           fi
+
+          PR_TITLE="chore: merge ${SOURCE_BRANCH} into ${TARGET_BRANCH}"
+          PR_BODY="This pull request has been created to trigger a release on ${TARGET_BRANCH} an should merge automatically"
+
+
+          git merge --no-ff -m "${PR_TITLE}" ${SOURCE_BRANCH}
           
           echo "🚀 Creating pull request from ${SOURCE_BRANCH} to ${TARGET_BRANCH}"
-
-          PR_TITLE="ci: merge ${SOURCE_BRANCH} into ${TARGET_BRANCH}"
-          PR_BODY="This pull request has been created to trigger a release on ${TARGET_BRANCH} an should merge automatically"
 
           pr_url=$( gh pr create --base ${TARGET_BRANCH} --head ${SOURCE_BRANCH} --title "${PR_TITLE}" --body "${PR_BODY}" --no-maintainer-edit )
 
@@ -58,8 +59,8 @@ jobs:
             exit 1
           fi
 
-          echo "🚀 Merging pull request ${pr_url} using a merge commit ..."
+          echo "🚀 Merging pull request ${pr_url} ..."
 
-          gh pr merge ${pr_url} --admin --merge --subject "${PR_TITLE}"
+          gh pr merge ${pr_url} --auto --rebase"
 
           echo "Pull request merged 🚀"
