--- a/.github/workflows/trigger-release.yml
+++ b/.github/workflows/trigger-release.yml
@@ -45,6 +45,8 @@ jobs:
           PR_TITLE="chore: merge ${SOURCE_BRANCH} into ${TARGET_BRANCH}"
           PR_BODY="This pull request has been created to trigger a release on ${TARGET_BRANCH} an should merge automatically"
 
+          git config --global user.email "devs@graviteesource.com"
+          git config --global user.name "Gravitee Developers"
 
           git merge --no-ff -m "${PR_TITLE}" ${SOURCE_BRANCH}
           
